--- a/Client/src/main/resources/static/tender.html
+++ b/Client/src/main/resources/static/tender.html
@@ -368,7 +368,7 @@
     <!-- 用户信息弹出框 -->
     <div id="accountInfo" class="accountInfoBox">
         <div class="layui-card">
-            <div class="layui-card-header layerMove">用户信息</div>
+            <div class="layui-card-header layerMove">账户信息</div>
             <div class="layui-card-body">
                 <!-- 用户信息 -->
                 <table class="layui-table">
@@ -378,19 +378,19 @@
                     </colgroup>
                     <tbody>
                     <tr>
-                        <td class="tableInfoKey">用户名称</td>
+                        <td class="tableInfoKey">账户名称</td>
                         <td class="tableInfoValue" id="accountInfoName"></td>
                     </tr>
                     <tr>
-                        <td class="tableInfoKey">用户身份</td>
+                        <td class="tableInfoKey">账户身份</td>
                         <td class="tableInfoValue" id="accountInfoRole"></td>
                     </tr>
                     <tr>
-                        <td class="tableInfoKey">用户地址</td>
+                        <td class="tableInfoKey">账户地址</td>
                         <td class="tableInfoValue" id="accountInfoAddress"></td>
                     </tr>
                     <tr>
-                        <td class="tableInfoKey">用户公钥</td>
+                        <td class="tableInfoKey">账户公钥</td>
                         <td class="tableInfoValue" id="accountInfoPk"></td>
                     </tr>
                     </tbody>
