--- a/Client/src/main/resources/static/tender.html
+++ b/Client/src/main/resources/static/tender.html
@@ -17,12 +17,14 @@
 <div class="layui-layout layui-layout-admin">
     <!-- 头部区域 -->
     <div class="layui-header">
-        <div class="layui-logo layui-bg-black defaultCursor"><img src="./resource/logo.png" alt="logo" class="logo">MaskBid</div>
+        <div class="layui-logo layui-bg-black defaultCursor"><img src="./resource/logo.png" alt="logo" class="logo">MaskBid
+        </div>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item layui-show-md-inline-block">
                 <a id="mainTitleAccountName"></a>
                 <dl class="layui-nav-child">
                     <dd><a onclick="openAccountInfoLayer()">账户信息</a></dd>
+                    <dd><a onclick="openReadme()">系统介绍</a></dd>
                     <dd><a onclick="logout()">退出登录</a></dd>
                 </dl>
             </li>
@@ -395,6 +397,15 @@
                     </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+    <!-- 帮助页弹出框 -->
+    <div id="readmeBox" class="bidDetailBox">
+        <div class="layui-card">
+            <div class="layui-card-header layerMove">系统介绍</div>
+            <div class="layui-card-body">
+                <iframe name="readme" class="readmeBox" src="./readme.html"></iframe>
             </div>
         </div>
     </div>
